CARLOTTA IS MINEEEE

--- a/webserv_test/testwebpage.html
+++ b/webserv_test/testwebpage.html
@@ -23,8 +23,8 @@
 	</head>
 <body>
 	<center>
-	<h1> rng best teammate </h1>
-	<p> webserv made by rng and frens</p>
+	<h1> rng + (future teammate) best teammates </h1>
+	<p> webserv made by rng and (future teammate)</p>
 	</center>
 </body>
 </html>
