--- a/webserv_test/upload.html
+++ b/webserv_test/upload.html
@@ -8,7 +8,7 @@
 <body>
 	<center>
     <h1>pls upload ur file here: </h1>
-    <form action="/cgi/upload.cgi" method="post" enctype="multipart/form-data">
+    <form action="/cgi/upload.py" method="post" enctype="multipart/form-data">
         <label for="file">Choose a file to upload:</label>
         <input type="file" id="file" name="file">
         <button type="submit">Upload</button>
